--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "framer-motion": "^12.11.0",
     "mongo": "^0.1.0",
     "next": "14.2.6",
+    "pusher": "^5.2.0",
+    "pusher-js": "^8.4.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
@@ -29,6 +31,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/ws": "^8.18.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.6",
     "postcss": "^8",
