--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@farcaster/frame-sdk": "^0.0.36",
     "@farcaster/frame-wagmi-connector": "^0.0.24",
     "@tanstack/react-query": "^5.64.2",
+    "@upstash/redis": "^1.34.9",
     "framer-motion": "^12.11.0",
     "mongo": "^0.1.0",
     "next": "14.2.6",
@@ -23,6 +24,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.5.0",
+    "redis": "^5.0.1",
     "viem": "^2.22.22",
     "wagmi": "^2.14.12",
     "zod": "^3.24.1"
