--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@farcaster/frame-node": "^0.0.22",
     "@farcaster/frame-sdk": "^0.0.36",
     "@farcaster/frame-wagmi-connector": "^0.0.24",
+    "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.34.9",
     "framer-motion": "^12.11.0",
