--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,31 @@
 # Next.js
-NEXT_PUBLIC_URL="http://localhost:3000"
+NEXT_PUBLIC_URL=""
+ENVELOPE_PRIVATE_KEY=
+MONAD_RPC_URL=
+MONGODB_URI=
+WALLET_PRIVATE_KEY_1=
+WALLET_PRIVATE_KEY_2=
+WALLET_PRIVATE_KEY_3=
+WALLET_PRIVATE_KEY_4=
+WALLET_PRIVATE_KEY_5=
+WALLET_PRIVATE_KEY_6=
+WALLET_PRIVATE_KEY_7=
+WALLET_PRIVATE_KEY_8=
+WALLET_PRIVATE_KEY_9=
+WALLET_PRIVATE_KEY_10=
+NEXT_PUBLIC_CONNECT4POOL_ADDRESS=
+PUSHER_APP_ID=
+PUSHER_KEY=
+PUSHER_SECRET=
+PUSHER_CLUSTER=
+NEXT_PUBLIC_PUSHER_KEY=
+NEXT_PUBLIC_PUSHER_CLUSTER=
+NEXT_PUBLIC_WINNER_VAULT_ADDRESS=
+
+NEXT_PUBLIC_TOKEN_REWARD_ADDRESS=
+NEXT_PUBLIC_YAKI_TOKEN_ADDRESS=
+NEXT_PUBLIC_OWL_TOKEN_ADDRESS=
+NEXT_PUBLIC_USDC_TOKEN_ADDRESS=
+
+NEXT_PUBLIC_CLIENT_SECRET_KEY=
+CLIENT_SECRET_KEY=
