--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18",
     "react-icons": "^5.5.0",
     "redis": "^5.0.1",
+    "socket.io": "^4.8.1",
     "viem": "^2.22.22",
     "wagmi": "^2.14.12",
     "zod": "^3.24.1"
