--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.34.9",
+    "@vercel/og": "^0.6.8",
     "framer-motion": "^12.11.0",
     "mongo": "^0.1.0",
     "next": "14.2.6",
