--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/frame-node": "^0.0.22",
-    "@farcaster/frame-sdk": "^0.0.36",
+    "@farcaster/frame-sdk": "^0.0.61",
     "@farcaster/frame-wagmi-connector": "^0.0.24",
+    "@farcaster/miniapp-sdk": "^0.1.6",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.34.9",
     "@vercel/og": "^0.6.8",
+    "ethers": "^6.15.0",
     "framer-motion": "^12.11.0",
     "mongo": "^0.1.0",
     "next": "14.2.6",
