--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.34.9",
     "@vercel/og": "^0.6.8",
+    "csv-parse": "^6.1.0",
     "ethers": "^6.15.0",
     "framer-motion": "^12.11.0",
     "mongo": "^0.1.0",
