--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
     "@farcaster/frame-node": "^0.0.22",
-    "@farcaster/frame-sdk": "^0.0.36",
+    "@farcaster/frame-sdk": "^0.0.55",
     "@farcaster/frame-wagmi-connector": "^0.0.24",
     "@farcaster/miniapp-sdk": "^0.1.6",
     "@t3-oss/env-nextjs": "^0.13.4",
@@ -24,6 +24,7 @@
     "framer-motion": "^12.11.0",
     "mongo": "^0.1.0",
     "next": "14.2.6",
+    "node-fetch": "^3.3.2",
     "pusher": "^5.2.0",
     "pusher-js": "^8.4.0",
     "react": "^18",
