--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@farcaster/auth-client": "^0.3.0",
-    "@farcaster/frame-node": "^0.0.22",
+    "@farcaster/auth-client": "^0.6.0",
+    "@farcaster/frame-node": "^0.0.36",
     "@farcaster/frame-sdk": "^0.0.55",
-    "@farcaster/frame-wagmi-connector": "^0.0.24",
-    "@farcaster/miniapp-sdk": "^0.1.6",
+    "@farcaster/frame-wagmi-connector": "^1.0.0",
+    "@farcaster/miniapp-core": "^0.3.6",
+    "@farcaster/miniapp-node": "^0.1.6",
+    "@farcaster/miniapp-sdk": "^0.1.7",
+    "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.34.9",
