--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Monad-twist",
+  "name": "monadtwist",
   "license": "MIT",
   "version": "0.1.0",
   "private": true,
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@farcaster/auth-client": "^0.3.0",
-    "@farcaster/frame-node": "^0.0.22",
+    "@farcaster/frame-node": "^0.0.36",
     "@farcaster/frame-sdk": "^0.1.12",
     "@farcaster/frame-wagmi-connector": "^1.0.0",
-    "@farcaster/miniapp-sdk": "^0.1.6",
+    "@farcaster/miniapp-sdk": "^0.2.0",
+    "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.34.9",
